changed results layout

--- a/draw_site/info.html
+++ b/draw_site/info.html
@@ -31,7 +31,7 @@
                     <div class="brand">
                         <h1>
                             <a id="index" href="index.html" style="color: inherit;">
-                                GANdraw
+                                Info
                             </a>
                         </h1>
                         <h3>
@@ -48,16 +48,6 @@
         <div class="container">
             <div id="typography" class="cd-section">
                 <br><br><br>
-                <div class="title">
-                    <h2>Learn More</h2>
-                </div>
-
-                <!-- Seperator -->
-                <div class="progress progress-line-primary">
-                    <div class="progress-bar progress-bar-seperator" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-                        <span class="sr-only"></span>
-                    </div>
-                </div>
 
                 <div class="row">
                     <div class="QA-Header">
@@ -67,7 +57,7 @@
                     </div>
                     <div class="QA-Answer">
                         <h3>
-                            We've created a website allowing users to easily interact with our trained Generative Adversarial Network (GAN) in order to create 
+                            We've created a website allowing users to easily interact with our trained Generative Adversarial Network (GAN) in order to create
                             computer generated doodles.
                             <br /><br />
                             Before VandyHacks, we thought of hackathons as a place to practice our technical programming skills and try out something new like Machine
@@ -84,9 +74,9 @@
                     <div class="QA-Answer">
                         <h3>
                             A Generative Adversarial Network, or GAN, is a class of deep learning that consists of two networks competing against each other.
-                            The generator learns to create fake data that appears like real data to the discriminator, while the discriminator tries to determine 
-                            whether a given piece of input data is real. The generator incorporates this feedback from the discriminator to make images more similar to the 
-                            original dataset. In our case, the generator creates fake images that appear to be accurate depictions of a certain word to the discriminator. 
+                            The generator learns to create fake data that appears like real data to the discriminator, while the discriminator tries to determine
+                            whether a given piece of input data is real. The generator incorporates this feedback from the discriminator to make images more similar to the
+                            original dataset. In our case, the generator creates fake images that appear to be accurate depictions of a certain word to the discriminator.
                         </h3>
                     </div>
 
