Updated FAQ and linked to dataset
Added FAQ question and linked to Google's Quick, Draw! dataset

--- a/draw_site/info.html
+++ b/draw_site/info.html
@@ -67,8 +67,11 @@
                     </div>
                     <div class="QA-Answer">
                         <h3>
-                            We've created a website allowing users to easily interact with our trained Generative Adversarial Network (GAN) in order to create 
-                            computer generated doodles.
+                            We created a website to allow users to easily interact with our Generative Adversarial Network (GAN) in order to create
+                            computer-generated doodles. We achieved this by using
+                            <a id="github" href="https://github.com/googlecreativelab/quickdraw-dataset" target="_blank" style="color: cornflowerblue">
+                                Google's Quick, Draw! dataset
+                            </a> to train our GAN with.
                             <br /><br />
                             Before VandyHacks, we thought of hackathons as a place to practice our technical programming skills and try out something new like Machine
                             Learning (ML). When considering the art theme of VandyHacks, we wanted to once again do something with ML to further our knowledge in the field,
@@ -106,7 +109,18 @@
                         </h2>
                     </div>
                     <div class="QA-Answer">
-                        <h3>Training large amounts of data</h3>
+                        <h3>
+                            One of our main concerns was mode collapse. This may occur when the generator generates a limited diversity of samples regardless of the
+                            discriminator's feedback, resulting in the model outputting a limited range of results. There are many other factors that affect when mode
+                            collapse occurs, which is why it remains one of the most complex issues in machine learning today.
+                            <br /><br />
+                            Other problems we had included needing to clean and parse 
+                            <a id="github" href="https://github.com/googlecreativelab/quickdraw-dataset" target="_blank" style="color: cornflowerblue">
+                                Google's Quick, Draw! dataset
+                            </a> with limited memory and computational resources.
+
+                            
+                        </h3>
                     </div>
 
                     <div class="QA-Header">
