Updated Website with Results
Included disclaimer about mode collapse issues and tidied up wording again.

--- a/draw_site/info.html
+++ b/draw_site/info.html
@@ -34,11 +34,6 @@
                                 Info
                             </a>
                         </h1>
-                        <h3>
-                            <a id="index" href="index.html" style="color: inherit;">
-                                Teaching a computer to doodle through GANs
-                            </a>
-                        </h3>
                     </div>
                 </div>
             </div>
@@ -134,9 +129,11 @@
                     </div>
                     <div class="QA-Answer">
                         <h3>
-                            We hope to train a Convolutional Recurrent Neural Network (CRNN) to draw the computer-generated images based off time between 
-                            points since we unfortunately did not have time to do so. Another feature we were planning to implement was running a 
-                            form of image analysis to predict colors based on the chosen word to make our doodles colorful.
+                            After solving our issues with 
+                            <a id="medium" href="https://medium.com/@jonathan_hui/gan-why-it-is-so-hard-to-train-generative-advisory-networks-819a86b3750b" target="_blank" style="color: cornflowerblue">
+                                mode collapsing</a>, we hope to train a Convolutional Recurrent Neural Network (CRNN) to draw the
+                            computer-generated images based off time between points since we unfortunately did not have time to do so. Another feature we were
+                            planning to implement was running a form of image analysis to predict colors based on the chosen word to make our doodles colorful.
                         </h3>
                         <br><br><br>
                     </div>
