--- a/draw_site/results.html
+++ b/draw_site/results.html
@@ -34,11 +34,6 @@
                                 Results
                             </a>
                         </h1>
-                        <h3>
-                            <a id="index" href="index.html" style="color: inherit;">
-                                Teaching a computer to doodle through GANs
-                            </a>
-                        </h3>
                     </div>
                 </div>
             </div>
@@ -47,19 +42,27 @@
     <div class="main main-raised">
         <div class="container">
             <div id="typography" class="cd-section">
-                <br><br><br>
+                <br><br><br />
 
-                <!-- Seperator -->
-                <div class="progress progress-line-primary">
-                    <div class="progress-bar progress-bar-seperator" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-                        <span class="sr-only"></span>
+                <!-- CODE HERE -->
+                <div class="row">
+                    <div class="QA-Header">
+                        <h2>
+                            <span class="tim-note"></span>Unfortunately...
+                        </h2>
+                    </div>
+                    <div class="QA-Answer">
+                        <h3>
+                            Due to time constraints, we were unable to train our model on all of the chosen categories. However, these were some of the
+                            results we obtained from our model. Our results do not look very similar to the categories due to
+                            <a id="medium" href="https://medium.com/@jonathan_hui/gan-why-it-is-so-hard-to-train-generative-advisory-networks-819a86b3750b" target="_blank" style="color: cornflowerblue">
+                                mode collapse</a>. In short, our model is outputting a limited range of results since our discriminator is not enforcing more diversity in the generator,
+                            and as a result, the generator is collapsing to a single point. 
+                        </h3>
                     </div>
                 </div>
                 <br><br>
 
-                <!-- CODE HERE -->
-                <h1>STUFF HERE</h1>
-                <br><br>
                 <!-- Seperator -->
                 <div class="progress progress-line-primary">
                     <div class="progress-bar progress-bar-seperator" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
